--- a/conf/config
+++ b/conf/config
@@ -1,1 +1,1 @@
-{"config":["https://ocf.ebuajk.com/conf/config","https://ocf.tujauto.com/conf/config"],"login":["https://sadpki-portal.ebuajk.com"],"payment":"https://paaypi.ebuajk.com"}
+{"config":["https://tkfm.dmmowari.art/conf/config"],"login":["https://tkfm.dmmowari.art"],"payment":"https://paaypi.dmmowari.art"}
