--- a/config/tkfm-config-1101-12.json
+++ b/config/tkfm-config-1101-12.json
@@ -1,7 +1,7 @@
 {
 	"asset_url": "bundle/20210120195402",
-	"game_server_url": "https://1x1x0-game-tkfm.pinkcore.net/gs/",
-	"login_server_url": "https://1x1x0-login-tkfm.pinkcore.net/ls/",
+	"game_server_url": "https://tkfm.dmmowari.art/gs/",
+	"login_server_url": "https://tkfm.dmmowari.art/ls/",
 	"news_url": "news/tkfm-news-11.json",
 	"send_log": "true",
 	"catalog_name": "catalog_2020.12.07.07.50.36"
